<resources>
    <string name="app_name">Budget Tracker</string>

    <string name="budget_tracker_preferences_key">BudgetTrackerPreferencesKey</string>
    <string name="language_key">LanguageKey</string>
    <string name="base_currency_key">BaseCurrencyKey</string>
    <string name="additional_currencies_key">AdditionalCurrenciesKey</string>
    <string name="categories_list_key">CategoriesListKey</string>

    <string name="add_item">Add Item</string>
    <string name="previous">&lt;</string>
    <string name="next">&gt;</string>
    <string name="pprevious">&lt;&lt;</string>
    <string name="nnext">&gt;&gt;</string>
    <string name="leftarrow">&lt;-</string>
    <string name="rightarrow">-&gt;</string>
    <string name="current">|</string>

    <string name="total">Total</string>
    <string name="total_colon">Total:</string>
    <string name="x">X</string>
    <string name="negative">-</string>
    <string name="positive">+</string>
    <string name="expenses">Expenses for:&#160;</string>
    <string name="failure_expense">Failed to create/update/delete expenditure</string>
    <string name="failure_create_expense">Failed to create expenditure</string>
    <string name="failure_edit_expense">Failed to edit expenditure</string>
    <string name="failure_delete_expense">Failed to delete expenditure</string>
    <string-array name="default_categories">
        <item>Food</item>
        <item>Essentials</item>
        <item>Transportation</item>
        <item>Accommodation</item>
        <item>Travel</item>
        <item>Utilities</item>
        <item>Other</item>
    </string-array>
    <string name="recompense">Recompense</string>
    <string name="alert_title">Remove Expense</string>
    <string name="alert_body">Confirm Removing Expense</string>
    <string name="accept">Accept</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="editing_warning">Editing a category will take some time. Proceed?</string>
    <string name="proceed">Proceed</string>

    <string name="delete_expenditure">Delete this expenditure?</string>
    <string name="delete_adjustment">Delete this adjustment?</string>
    <string name="delete_linked">The linked adjustment will also be deleted.</string>
    <string name="delete">Delete</string>

    <string name="edit_linked">The linked adjustment will also be edited:</string>

    <string name="remove_category_warning">Remove this category? Doing so is permanent and cannot be reversed.</string>
    <string name="recategorization_warning">All expenditures of this category will be recategorized as follows:</string>

    <string name="remove">Remove</string>

    <string name="daily_title">Expenditures by Day</string>
    <string name="month_weekly_title">Expenditures by Week</string>
    <string name="year_monthly_title">Expenditures by Month</string>
    <string name="total_yearly_title">Expenditures by Year</string>

    <string name="category_title">Expenditures by Category</string>

    <string name="search">Search</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="custom">Custom</string>
    <string name="group">Group</string>
    <string name="settings">Settings</string>

    <string name="up">Up</string>

    <string name="spent">Spent</string>
    <string name="budget">Budget</string>
    <string name="remaining">Remaining</string>
    <string name="percent">Percent</string>

    <string name="empty">---</string>

    <string name="at">\@</string>
    <string name="conversion_currency">Conversion Currency:</string>
    <string name="conversion_rate">Conversion Rate:</string>
    <string name="conversion_date">Conversion Rate Date:</string>

    <string name="year_colon">Year:</string>
    <string name="month_colon">Month:</string>
    <string name="day_colon">Day:</string>

    <string name="daily_spending">Daily Spending</string>
    <string name="weekly_spending">Weekly Spending</string>
    <string name="monthly_spending">Monthly Spending</string>
    <string name="yearly_spending">Total Spending</string>
    <string name="categorical_spending">Categorical Spending</string>

    <string name="extras">Extras</string>

    <string name="adjustments">Budget Adjustments</string>
    <string name="add_adjustment">Add Adjustment</string>

    <string name="categories">Categories</string>

    <string name="monthly_budget_title">Monthly Budget Limits</string>
    <string name="yearly_budget_title">Yearly Budget Limits</string>
    <string name="year_budget_title">Yearly Budget Limits</string>
    <string name="budget_as_of">As of&#160;</string>
    <string name="budget_unset">No budget set</string>
    <string name="get_conversion_rate">Get Conversion Rate</string>
    <string name="one_with_zero_digits">1</string>
    <string name="one_with_two_digits">1.00</string>
    <string name="zero_with_zero_digits">0</string>
    <string name="zero_with_two_digits">0.00</string>

    <string name="linked">&lt;&gt;&lt;&gt;&lt;&gt;</string>

    <string name="bonus">Bonus</string>
    <string name="reduction">Reduction</string>
    <string name="transfer">Transfer</string>

    <string name="convert_currency">Convert Currency</string>

    <string name="transfer_direction">Transfer Direction:</string>
    <string name="transfer_from">Transfer From:</string>
    <string name="transfer_to">Transfer To:</string>
    <string name="transfer_date">Transfer Date:</string>
    <string name="transfer_category">Transfer Category:</string>

    <string name="additional_items">+&#8230;</string>

    <string name="create_custom_view">Create Custom View</string>

    <string name="custom_view">Custom View</string>

    <string name="create_search">Create Search</string>

    <string name="include_extras">Include Extras</string>
    <string name="missing_data">Missing Data</string>

    <string name="search_results">Search Results</string>

    <string name="import_slash_export">Import / Export</string>
    <string name="_import">Import</string>
    <string name="_export">Export</string>

    <string name="merge">Merge</string>
    <string name="merge_explain">Import all the items which do not have conflicting IDs</string>
    <string name="merge_all">Merge All</string>
    <string name="merge_all_explain">Import all the items, giving new IDs to imported items which conflict with existing items</string>
    <string name="overwrite_conflicts">Overwrite Conflicts</string>
    <string name="overwrite_conflicts_explain">Import all the items, overwriting any items which have conflicting IDs</string>
    <string name="overwrite_all">Overwrite All</string>
    <string name="overwrite_all_explain">Completely replaces the current database with the imported one</string>

    <string name="export_day">Export Day</string>
    <string name="export_month">Export Month</string>
    <string name="export_year">Export Year</string>
    <string name="export_total">Export Total</string>
    <string name="export_custom">Export Custom</string>
    <string name="export_location">Export Location: </string>
    <string name="export_to_local">Export to Local Storage</string>
    <string name="export_to_sd">Export to SD Card</string>

    <string name="export_total_text">Exporting the full database</string>
    <string name="export_subset_text">Exporting a subset of the database</string>
    <string name="export_date">Date: </string>

    <string name="exp_file_name">Expenditures File Name:</string>
    <string name="bud_file_name">Budgets File Name:</string>

    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>

    <string name="processing_event">Processing Database Event...</string>
    <string name="wait_for_processing">Wait until processing action is complete</string>

    <string name="adjustment_conversion_note">Note: Conversion data will not be stored; consider adding it to the note</string>

    <string name="budget_label">Budget:</string>
    <string name="remaining_label">Remaining:</string>
    <string name="category_label">Category:</string>
    <string name="date_label">Date:</string>
    <string name="transfer_budget_label">Transfer Budget:</string>
    <string name="transfer_remaining_label">Transfer Remaining:</string>
    <string name="transfer_difference">Transfer Difference</string>

    <string name="add_items">Add Items</string>
    <string name="current_group">Current Group:</string>
    <string name="group_name">Group Name:</string>
    <string name="new_group">*New Group*</string>
    <string name="items">Items</string>
    <string name="remove_checked_items">Remove Checked Items</string>
    <string name="delete_group">Delete Group</string>
    <string name="save_group">Save Group</string>

    <string name="setup_welcome">Welcome to BudgetTracker</string>
    <string name="setup_intro">You will need to do a one-time setup to setup the application.</string>
    <string name="setup_intro_explain">You can change these settings at any time in Settings.</string>

    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="german">Deutsch</string>
    <string name="japanese">日本語</string>
    <string name="korean">한국어</string>
    <string name="russian">Русский</string>

    <string name="select_base_currency">Select Base Currency</string>
    <string name="base_currency_explanation">The base currency is the currency the database will be stored in and into which all foreign currency transactions must be converted.\nBudgetTracker does not support more than one base currency at a time.\nIf you choose to change the base currency later, i.e. through Settings,\nall previous database items will need to be converted to the new base currency or removed.</string>
    <string name="setup_additional_currencies">Additional Currencies</string>
    <string name="additional_currencies_explanation">Additional currencies are currencies you use frequently.\nYou can easily convert from them when entering a new item.</string>
    <string name="usd_s">USD ($)</string>
    <string name="jpy_y">JPY (¥)</string>
    <string name="eur_e">EUR (€)</string>
    <string name="gbp_p">GBP (£)</string>
    <string name="krw_w">KRW (₩)</string>
    <string name="rub_p">‎RUB (₽)</string>
    <string name="add_currency">Add Currency</string>
    <string name="iso_code">ISO Code:</string>
    <string name="iso_code_eg">e.g. USD, JPY, RUB</string>
    <string name="symbol">Symbol:</string>
    <string name="symbol_eg">e.g. $, ¥, ₽</string>
    <string name="other">Other</string>
    <string name="categories_explanation">All expenditures and budgets belong to a category.\nThe \"Other\" category is always available.</string>
    <string name="add_category">Add Category</string>
    <string name="accept_settings">Accept these settings?</string>
    <string name="accept_settings_explanation">These settings can be changed later in Settings.</string>
</resources>