<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/importLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/importTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/_import"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/importRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/mergeRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/merge" />

        <TextView
            android:id="@+id/mergeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_weight="1"
            android:text="@string/merge_explain" />

        <RadioButton
            android:id="@+id/mergeAllRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/merge_all" />

        <TextView
            android:id="@+id/mergeAllTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_weight="1"
            android:text="@string/merge_all_explain" />

        <RadioButton
            android:id="@+id/overwriteConflictsRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/overwrite_conflicts" />

        <TextView
            android:id="@+id/overwriteConflictsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_weight="1"
            android:text="@string/overwrite_conflicts_explain" />

        <RadioButton
            android:id="@+id/overwriteAllRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/overwrite_all" />

        <TextView
            android:id="@+id/overwriteAllTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_weight="1"
            android:text="@string/overwrite_all_explain" />

    </RadioGroup>

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp"/>

    <Button
        android:id="@+id/importButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onImport"
        android:text="@string/_import" />

</LinearLayout>