<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/selectAdditionalCurrenciesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_additional_currencies"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/nextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32" />

    <TextView
        android:id="@+id/additionalCurrenciesExplanationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/additional_currencies_explanation"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/nextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectAdditionalCurrenciesTextView"
        app:layout_constraintVertical_bias=".1" />

    <ScrollView
        android:id="@+id/additionalCurrenciesScrollView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/additionalCurrenciesExplanationTextView"
        app:layout_constraintVertical_bias="0.120000005">

        <LinearLayout
            android:id="@+id/additionalCurrenciesLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/usdCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/usd_s" />

            <CheckBox
                android:id="@+id/jpyCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jpy_y" />

            <CheckBox
                android:id="@+id/eurCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eur_e" />

            <CheckBox
                android:id="@+id/gbpCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gbp_p" />

            <CheckBox
                android:id="@+id/krwCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/krw_w" />

            <CheckBox
                android:id="@+id/rubCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rub_p" />
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/addCurrencyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_currency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/additionalCurrenciesScrollView" />

    <Button
        android:id="@+id/previousMonthButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="64dp"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/nextButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/nextMonthButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="@+id/previousButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/previousButton"
        app:layout_constraintTop_toTopOf="@+id/previousButton"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>