<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/exportLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:orientation="vertical"
    android:visibility="visible">

    <TextView
        android:id="@+id/exportTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/_export"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/exportLocationLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/exportToLocalTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center|center_horizontal"
            android:text="@string/export_to_local"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/exportLocationSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:showText="false" />

        <TextView
            android:id="@+id/exportToSDTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/export_to_sd" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/exportTypeRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/exportTotalRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/export_total" />

        <RadioButton
            android:id="@+id/exportYearRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/export_year" />

        <RadioButton
            android:id="@+id/exportMonthRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/export_month" />

        <RadioButton
            android:id="@+id/exportDayRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/export_day" />

        <RadioButton
            android:id="@+id/exportCustomRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/export_custom" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/dateSelectLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/export_date"
            android:textColor="@color/black" />

        <ImageButton
            android:id="@+id/selectDateButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="selectDate"
            app:srcCompat="@android:drawable/ic_menu_my_calendar" />

        <TextView
            android:id="@+id/yearTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/year_colon" />

        <TextView
            android:id="@+id/yearSelectedTextView"
            android:layout_width="52dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="4dp" />

        <TextView
            android:id="@+id/monthYearTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/month_colon" />

        <TextView
            android:id="@+id/monthSelectedTextView"
            android:layout_width="52dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="4dp" />

        <TextView
            android:id="@+id/dayTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/day_colon" />

        <TextView
            android:id="@+id/daySelectedTextView"
            android:layout_width="52dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="4dp" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/fileNameConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/expFileNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/exp_file_name"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/expFileNameEditText"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/expFileNameExtTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expFileNameTextView" />

        <TextView
            android:id="@+id/expFileNameExtTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:text=".db"
            app:layout_constraintBottom_toBottomOf="@+id/expFileNameEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/expFileNameEditText" />

        <TextView
            android:id="@+id/budFileNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/bud_file_name"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/expFileNameEditText" />

        <EditText
            android:id="@+id/budFileNameEditText"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/budFileNameExtTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/budFileNameTextView" />

        <TextView
            android:id="@+id/budFileNameExtTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:text=".db"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/budFileNameEditText" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/exportTotalTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/export_total_text"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/exportSubsetTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/export_subset_text"
        android:textColor="@color/black"
        android:visibility="gone" />

    <Button
        android:id="@+id/exportButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onExport"
        android:text="@string/_export" />

</LinearLayout>